Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115765

QAbstractItemView::EditingState: state stale when editing with a proxy model

    XMLWordPrintable

Details

    • 044152644 (dev), 97dd51e67 (6.7), 298c57bb9 (6.6), 0738f6654 (tqtc/lts-6.5)

    Description

      The editing model cells with a tree view via a proxy model can result in the underlying QAbstractItemView state being left in the EditingState even after editing has completed.

      Steps to Reproduce:
      1. Extract and compile QTBUG-115765.zip
      2. Launch the application
      3. Expand the "Getting Started" index in the tree view
      4. Notice there are two child nodes: "Launching Designer" and "The User Interface"
      5. Add the string "Launching" to the Filter line edit that appears immediately above the table view
      6. Notice that only the "Launching Designer" child node appears under "Getting Started" (Good; proxy filter is working)
      7. Double-click the "Launching Designer" cell and rename it to "Test"
      8. Notice that the cell disappears (Good because it no longer matches the filter)
      9. Clear the filter line edit
      10. Notice that all cells reappear (good because the filter has been removed)
      11. Double-click any cell (NOTE: be careful to not initiate a drag; keep mouse still while double-clicking)
      12. Notice that cells may not be modified. The editor does not appear.
      13. Clicking and dragging on a cell will reset the state and enable editing again.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vhilshei Volker Hilsheimer
              chakib Chakib Boutaghane
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: